welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: not found: value ||
	if (vacation)||(!weekday) x=true
                     ^